--- a/package.json
+++ b/package.json
@@ -8,13 +8,17 @@
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.6.0",
+    "antd": "^4.16.2",
     "firebase": "^8.2.1",
     "firebase-tools": "^9.1.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-flip-move": "^3.0.4",
+    "react-redux": "^7.2.4",
     "react-scripts": "^4.0.1",
     "react-twitter-embed": "^3.0.3",
+    "redux": "^4.1.0",
+    "redux-persist": "^6.0.0",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
